# django-wechat-base

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
django_wechat.egg-info/: PKG-INFO  SOURCES.txt
django_wechat_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wechat/: admin.py  api.py  base.py  member.py  menu.py  message.py  message.xml  models.py  payment.py  payment3.py  tests.py  urls.py  views.py  wxa.py  wxb.py
wechat/api/: base.py  js.py  message.py  pay.py  qrcode.py
wechat/templates/wechat/: simulator.html
